# pdf-ocr

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: app.ts  server.ts
api/src/config/: bootstrap.ts  env-load.ts  env.ts
api/src/controllers/: account.controller.ts  auth.controller.ts  jobs.controller.ts
api/src/lib/: app-error.ts  jwt.ts  password.ts  refresh-crypto.ts  require-auth.ts  sse.ts
api/src/mappers/: job.mapper.ts
api/src/repositories/: job.repository.ts  refresh-session.repository.ts  user.repository.ts
api/src/routes/: account.plugin.ts  auth.plugin.ts  jobs.plugin.ts
api/src/schemas/: auth.zod.ts  job.zod.ts
api/src/services/: account.service.ts  auth.service.ts  job.service.ts
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  worker.py
backend/app/routes/: jobs.py  stream.py
backend/app/services/: ocr.py  progress.py
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/components/: FileDropzone.tsx  JobProgress.tsx  OcrSettings.tsx  PdfPreview.tsx  pagination.tsx  theme-toggle.tsx
frontend/config/: layout.ts  site.ts
frontend/lib/: api-auth-fetch.ts  api-base.ts  api.ts  auth-api.ts  auth-validation.ts  estimate-ocr.ts  mock-account.ts  ocr-labels.ts  utils.ts
(+54 files in other folders)
