[project]
name = "pdf-reader-backend"
version = "0.1.0"
description = "PDF OCR converter backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlmodel==0.0.22",
    "python-multipart==0.0.12",
    "sse-starlette==2.1.3",
    "aiofiles==24.1.0",
    "ocrmypdf>=16.0.0",
]
